fix(app): main content with menu open, remove shift ( canvas problem ), use only opacity.

--- a/src/scss/component/mob-js-params/index.scss
+++ b/src/scss/component/mob-js-params/index.scss
@@ -37,7 +37,6 @@
     }
 
     &.shift {
-        transform: translateX(var(--main-translate));
         pointer-events: none;
         opacity: 0.1;
     }
